test_suite/tests/ui/integer/validate/unknown.stderr
error: Unknown validator `meaningful`
 --> tests/ui/integer/validate/unknown.rs:3:19
  |
3 | #[nutype(validate(meaningful))]
  |                   ^^^^^^^^^^
